QSG v6: Spectral Lab v1 R&D and geom–nuclear–FDM integration

--- a/docs/name3.tex
+++ b/docs/name3.tex
@@ -202,6 +202,211 @@ The \texttt{geom-spec v4.0} model, including the Numerical Engine, Geometric per
 фиксирую четыре ключевых эффекта, которые устойчиво проявляются
 в версиях модели v1.0 и v2.0.
 
+\subsection{Статус реализации: QSG v5.0}
+
+В версии QSG v5.0 реализованы три технических уточнения, которые фиксируют
+связь между геометрической таблицей, стохастическим ростом деревьев и
+функционалом сложности.
+
+\subsubsection*{[QSG v5.0] Мягкость кремния в росте деревьев}
+
+Для описания ростовой динамики молекулярных деревьев введён
+безразмерный параметр \emph{softness} для геометрического атома.
+Каждому элементу $Z$ сопоставляется число
+\[
+  s(Z) \in [0,1),
+\]
+которое кодирует ``мягкость'' атома как ростовой единицы в генераторе деревьев.
+
+В реализации QSG v5.0:
+
+\begin{itemize}
+  \item для углерода $C$ используется $s(C) = 0.0$;
+  \item для кремния $Si$ задано $s(Si) = 0.30$;
+  \item для остальных элементов зелёной зоны (H--Kr) по умолчанию $s(Z) = 0.0$.
+\end{itemize}
+
+В стохастическом генераторе деревьев (модуль Grower) параметр $s(Z)$
+входит в глобальную вероятность продолжения ветвления. Если корневой атом
+имеет мягкость $s_{\mathrm{seed}}$, то на каждом шаге роста базовая
+вероятность продолжения ветви $p_{\mathrm{continue}}$ умножается на фактор
+\[
+  p_{\mathrm{continue}} \;\mapsto\; p_{\mathrm{continue}} \cdot
+  (1 - s_{\mathrm{seed}}).
+\]
+
+Таким образом, для кремния ($s_{\mathrm{seed}} = 0.30$) реализуется
+ослабление типичных размеров и сложностей деревьев по сравнению с углеродом
+при прочих равных параметрах роста. В выборках QSG v5.0 средний размер
+деревьев $Si$ и их нормированная сложность находятся заметно ниже, чем у
+деревьев $C$, что согласуется с предположением о большей ``мягкости''
+Si--Si связей по сравнению с C--C.
+
+\subsubsection*{[QSG v5.0] Статистика циклов и статус crossing-number слоя}
+
+Для молекулярного генератора в зелёной зоне QSG v5.0 исследована
+статистика циклов. Для набора стартовых семян
+\[
+  \{Li, Na, K, Be, Mg, Ca, C, N, O, Si, P, S\}
+\]
+генерировались выборки молекул при одинаковых параметрах роста, и для
+каждой молекулы вычислялось цикломатическое число
+\[
+  \nu_{\mathrm{cycl}} = E - V + C,
+\]
+где $E$ --- число рёбер, $V$ --- число вершин, $C$ --- число компонент
+связности (в рассматриваемых выборках $C=1$).
+
+Результаты QSG v5.0 имеют вид
+\[
+  \mathrm{frac\_trees} \approx 1.0, \qquad
+  \mathrm{frac\_cycles} \approx 0.0, \qquad
+  \max \nu_{\mathrm{cycl}} = 0
+\]
+для всех указанных семян. То есть на текущем уровне генерации \emph{все}
+случайные молекулярные конфигурации представляют собой деревья, и
+циклы практически не возникают.
+
+Из этого делается два вывода:
+
+\begin{enumerate}
+  \item На уровне QSG v5.0 достаточно считать, что молекулярный
+        генератор работает в \emph{чисто деревьевом} режиме.
+  \item Crossing-number слой функционала сложности (штраф за пересечения
+        и зацепления) остаётся в статусе запланированного расширения
+        модели и \emph{не входит} в базовый функционал сложности в
+        зелёной зоне QSG v5.0.
+\end{enumerate}
+
+Иными словами, на текущем этапе crossing-number рассматривается как
+кандидат для будущих версий (QSG v6.x и далее), где генератор будет
+расширен до полноценного класса связных графов с циклами и возможными
+пересечениями.
+
+\subsubsection*{[QSG v5.0] Потолок сложности деревьев и константа $\alpha_{\mathrm{tree}}$}
+
+Для деревьев, генерируемых в зелёной зоне QSG v5.0, введён феноменологический
+закон роста сложности вида
+\[
+  C_1(n) \;\approx\; \alpha_{\mathrm{tree}} \, n \, \log(1+n),
+\]
+где $n$ --- характерный размер дерева (например, среднее число атомов),
+а $C_1(n)$ --- одна из топологических метрик сложности дерева (вариант $v1$),
+усреднённая по ансамблю деревьев при фиксированных условиях роста.
+
+По данным численных экспериментов QSG v5.0:
+
+\begin{itemize}
+  \item для ``сырых'' топологических признаков (версия сложности $v1$) получено
+        значение
+        \[
+          \alpha_{\mathrm{tree}}^{(v1)} \approx 0.185,
+        \]
+  \item для сложности на основе FDM-интеграла (версия сложности FDM) ---
+        \[
+          \alpha_{\mathrm{tree}}^{(\mathrm{FDM})} \approx 0.205,
+        \]
+\end{itemize}
+для диапазона характерных размеров деревьев
+\[
+  n \in [5.8,\; 18.0] \quad (\text{порядок величин}).
+\]
+
+Эти значения $\alpha_{\mathrm{tree}}$ фиксируются как \emph{R\&D-инварианты}
+QSG v5.0: они описывают эффективный ``потолок сложности'' для деревьев,
+которые генерирует текущий ростовой механизм при заданных параметрах
+(включая softness). На данном этапе $\alpha_{\mathrm{tree}}$ не
+интерпретируется как фундаментальная физическая константа, но может
+использоваться:
+
+\begin{itemize}
+  \item как параметр для нормировки сложности деревьев в сравнительных
+        экспериментах,
+  \item как ориентир при построении функционалов, ограничивающих
+        рост сложности (capacity-ограничения) в более сложных версиях
+        модели.
+\end{itemize}
+
+\subsection{Spectral Lab v1: минимальный оператор $\hat{H}$ в одномерной среде}
+
+Помимо графового приближения спектрального оператора, в версии
+QSG v6.0 введён первый ``честный'' оператор малых колебаний
+$\hat{H}$ в виде одномерной решёточной модели. Цель Spectral Lab v1
+--- дать минимальный лабораторный стенд для проверки идей спектральной
+физики и функционала уровней $F_{\mathrm{levels}}$.
+
+\subsubsection*{1D-оператор и спектр}
+
+В модуле \texttt{core/spectral\_lab\_1d.py} реализована одномерная
+решётка $X = \{x_i\}_{i=1}^N$ с шагом $dx$ и потенциалом $V(x)$,
+заданным как функция координаты. На этой решётке строится оператор
+типа одномерного гамильтониана
+\[
+  H \;=\; -\frac{1}{2m}\,\frac{\mathrm{d}^2}{\mathrm{d}x^2} + V(x)
+\]
+в стандартной трёхдиагональной дискретизации. Вычисляется полный
+набор собственных значений и собственных векторов $H$; по нему
+строятся дискретная плотность состояний (DOS) и локальная плотность
+состояний (LDOS) вдоль $X$.
+
+Spectral Lab v1 включает несколько простых потенциалов для тестирования
+(ящик, гармонический осциллятор и т.п.), что позволяет получать
+интуитивно понятные спектры и сравнивать их с известными аналитическими
+результатами.
+
+\subsubsection*{Функционал $F_{\mathrm{levels}}$ и FDM-прокси}
+
+В модуле \texttt{core/f\_levels\_1d.py} определены две версии
+игрушечного функционала уровней $F_{\mathrm{levels}}$:
+
+\begin{itemize}
+  \item \textbf{Спектральная версия.} Функционал
+        $F_{\mathrm{levels}}^{(\mathrm{spec})}$ вычисляется как
+        сумма по спектру оператора $H$:
+        \[
+          F_{\mathrm{levels}}^{(\mathrm{spec})}
+          \;=\;
+          \sum_k w(E_k),
+        \]
+        где $\{E_k\}$ --- собственные значения $H$, а $w(E)$ ---
+        гладкая весовая функция по энергии (например, гауссовская).
+  \item \textbf{FDM-прокси.} Приближённая версия
+        $F_{\mathrm{levels}}^{(\mathrm{FDM})}$ вычисляется на решётке
+        по потенциалу $V(x)$ с использованием фрактально-монте-карловой
+        (FDM) выборки по пространству:
+        вместо явного спектра используется интеграл по $V(x)$ с тем
+        же весом $w(\cdot)$, реализованный как усреднение по узлам
+        решётки.
+\end{itemize}
+
+Скрипт \texttt{analysis/test\_spectral\_lab\_1d.py} создаёт несколько
+тестовых стендов (ящик, гармонический осциллятор), вычисляет
+$F_{\mathrm{levels}}^{(\mathrm{spec})}$ и
+$F_{\mathrm{levels}}^{(\mathrm{FDM})}$ и записывает результаты в
+файлы \texttt{results/spectral\_lab\_1d\_*.txt}. Это даёт первый
+численный пример того, как один и тот же функционал уровней может
+быть вычислен как по спектру оператора, так и по FDM-прокси.
+
+\subsubsection*{Статус Spectral Lab v1 в QSG v6.0}
+
+Spectral Lab v1 следует рассматривать как минимальный лабораторный
+стенд для спектральной физики:
+
+\begin{itemize}
+  \item Он даёт первый явный пример оператора $\hat{H}$ и
+        функционала $F_{\mathrm{levels}}$ в рамках QSG, пусть пока
+        и в одномерной игрушечной модели.
+  \item Связь с основным слоем FDM/Complexity и с геометрической
+        таблицей на данном этапе носит характер R\&D: сравниваются
+        значения $F_{\mathrm{levels}}^{(\mathrm{spec})}$ и
+        $F_{\mathrm{levels}}^{(\mathrm{FDM})}$, но прямого моста к
+        $\chi_{\mathrm{spec}}(Z)$ и D/A-индексам ещё нет.
+  \item Расширение Spectral Lab до двумерных и трёхмерных операторов,
+        а также до реалистичных атомных конфигураций и прямой связи
+        с геометрическим атомом отнесено к жёлтой зоне версий
+        QSG v6.x и далее.
+\end{itemize}
+
 \paragraph{1. Мир близнецов (версия v1.0).}
 
 В базовой калибровке v1.0 элементы одной группы периодической таблицы
@@ -4837,6 +5042,36 @@ $\hat H[\theta]$ и вычисление спектральных характе
 \label{sec:numerical-complexity-grower}
 
 В версии v4.0 вычислительный комплекс был дополнен двумя новыми модулями: \texttt{complexity.py} (анализ сложности графов) и \texttt{grower.py} (вероятностный рост молекул).
+\subsubsection*{Ограничения слоя сложности в версии QSG v5.0}
+
+На уровне реализации QSG v5.0 слой сложности работает в упрощённом,
+но уже количественно контролируемом режиме. Важно явно зафиксировать
+следующие ограничения:
+
+\begin{itemize}
+  \item Ростовой генератор (Grower) в зелёной зоне модели порождает
+        \emph{деревья}: статистически $\nu_{\mathrm{cycl}} = 0$ для
+        всех стандартных семян, т.е. циклы и пересечения практически
+        не возникают (см. подраздел о статистике циклов в разделе
+        ``Статус реализации: QSG v5.0'').
+  \item Соответственно, базовый функционал сложности в QSG v5.0
+        построен для деревьев и не включает crossing-number и другие
+        инварианты зацепления. Crossing-слой рассматривается как
+        расширение для будущих версий (QSG v6.x и далее), где
+        генератор будет поддерживать полноценный класс связных графов
+        с циклами.
+  \item В версии QSG v5.0 параметр мягкости $s(Z)$ (softness) входит
+        в ростовую динамику как глобальный демпфирующий множитель
+        для вероятности продолжения ветвления, что уже обеспечивает
+        различие в типичных размерах и сложностях деревьев для разных
+        элементов (например, $C$ и $Si$).
+\end{itemize}
+
+Таким образом, слой Complexity/Grower в QSG v5.0 следует рассматривать
+как корректно реализованный \emph{деревьевый} предел полной спектральной
+модели: он задаёт осмысленные инварианты и законы роста для деревьев,
+оставляя crossing-number и связанные топологические штрафы в статусе
+запланированного расширения.
 
 \subsection{Закон роста деревьев (Christmas Tree Law)}
 
@@ -5815,14 +6050,40 @@ C(G)\sim \alpha_{\mathrm{tree}}\,n(G)\,\log(1+n(G)),
 а в уровнях нормированной сложности $C(G)/\bigl(n\log(1+n)\bigr)$, задающих иерархию terminator $\ll$ bridge $\ll$ hub.
 \end{law}
 
-  \section{Текущий охват модели (``зелёная зона'')}
+\section{Текущий охват модели (``зелёная зона'')}
 
 \section*{Сводка геометрических и ядерно-геометрических законов}
 
 \paragraph{Закон ролей на D/A-плоскости.}
-Элементы, размещённые на плоскости индексов $(D,A)$, распадаются на устойчивые роли:
-\emph{terminator}, \emph{bridge}, \emph{hub}, \emph{inert}.
-Роли являются геометрическими аттракторами: небольшие изменения спектрального индекса $\chi_\mathrm{spec}$ или параметров калибровки почти всегда оставляют элемент в том же классе.
+  Элементы, размещённые на плоскости индексов $(D,A)$, распадаются на устойчивые роли:
+  \emph{terminator}, \emph{bridge}, \emph{hub}, \emph{inert}.
+  Роли являются геометрическими аттракторами: небольшие изменения спектрального индекса $\chi_\mathrm{spec}$ или параметров калибровки почти всегда оставляют элемент в том же классе.
+  
+  \medskip
+  \noindent\textbf{Статус в QSG v5.0.}
+  На уровне реализации QSG v5.0 закон распределения ролей на D/A-плоскости
+  является \emph{наблюдаемым и устойчивым законом зелёной зоны} для
+  элементов H--Kr. Кратко:
+  
+  \begin{itemize}
+    \item \textbf{Источник.} Закон выводится из геометрической модели
+          атома (портовая структура и роли) и калиброванной спектральной
+          электроотрицательности $\chi_{\mathrm{spec}}(Z)$ для s/p-блока,
+          с последующим построением индексов $(D,A)$.
+    \item \textbf{Поддержка в коде.} Реализован в пайплайне
+          QSG v5.0: модули \texttt{core/geom\_atoms.py},
+          анализ \texttt{analysis/compute\_element\_indices.py},
+          итоговые таблицы \texttt{data/element\_indices\_with\_dblock.csv}
+          и \texttt{geom\_periodic\_table\_v1.csv}. В этих данных роли
+          и D/A-индексы для H--Ar устойчиво воспроизводятся при повторных
+          расчётах.
+    \item \textbf{Ограничения.} В полной форме закон подтверждён для
+          s/p-блока (H--Ar) и частично распространён на первый d-период
+          с эмпирическим расширением по $\chi_{\mathrm{spec}}$ (см.
+          статус d-блока). Расширение на более тяжёлые элементы и
+          строгий вывод из континуального оператора $\hat{H}[\theta]$
+          отнесены к жёлтой зоне модели.
+  \end{itemize}
 
 \paragraph{Закон донорных и акцепторных плато.}
 s-блок образует донорные плато по $D$ при $A \approx 0$ (первый и второй столбцы), 
@@ -5851,6 +6112,33 @@ p-элементы с тройной координацией формируют
 Численные сканы (\texttt{scan\_dblock\_complexity.py}, \texttt{test\_d\_block\_universality.py}) показывают устойчивый «металлический супер-хаб-уровень» d-блока.
 
 \paragraph{Закон ядерной $\beta$-совместимости геометрических ролей.}
+\medskip
+\noindent\textbf{Статус реализации для d-блока.}
+Следует подчеркнуть, что на уровне реализации QSG v5.0 d-слой
+геометрической таблицы носит \emph{экспериментальный} характер.
+В текущем коде d-элементы первого d-периода включены через линейную
+калибровку спектральной электроотрицательности
+$\chi_{\mathrm{spec}}$ по табличным значениям Паулинга, без
+полноценной геометрической модели атома d-элемента. Поэтому любые
+утверждения о ``универсальном d-слое'' следует на данном этапе
+рассматривать как рабочую гипотезу, а не как завершённый закон
+модели. Перевод d-блока на тот же геометрический и спектральный
+движок, что используется для s/p-блока, отнесён к жёлтой зоне.
+
+\medskip
+\noindent\textbf{Статус реализации для ядерного модуля.}
+На уровне QSG v5.0 ядерный функционал $F_{\mathrm{nuc}}$ реализован
+в виде отдельной полуэмпирической модели, подогнанной под ограниченный
+набор стабильных ядер. Связь между геометрической таблицей
+(D/A-индексы, роли, сложность атомного графа) и ядерной стабильностью
+в текущей реализации носит характер пост-фактум-корреляций и
+визуализаций, а не выводится строго из единого спектрального оператора
+$\hat{H}[\theta]$. Поэтому формулировки, связывающие геометрические
+роли и долину стабильности, на данном этапе следует трактовать как
+предварительные гипотезы. Построение строгого моста между геометрическим
+и ядерным слоями отнесено к жёлтой зоне модели.
+
+
 Все геометрические роли (terminator, bridge, hub, d-слой) живут на одной и той же нейтронобогатой $\beta$-долине $N_{\mathrm{best}}/Z \approx 1.7\text{--}1.8$,
 определяемой функционалом $F_\mathrm{nuc}$.
 Различия по ростовой живости и сложности возникают уже внутри этого узкого ядерного коридора, а не за счёт разных $N/Z$.
@@ -5871,31 +6159,38 @@ $C(G)\sim \alpha_{\mathrm{tree}}\,n(G)\,\log(1+n(G))$,
 доведены до уровня рабочей численной реализации (пусть и в виде
 упрощённых прототипов).
 
-На момент версии v0.1 в зелёную зону входят:
+\paragraph{Зелёная зона (реализовано и используется в QSG v5.0).}
+
+На момент версии QSG v5.0 в зелёную зону входят следующие элементы модели:
 
 \begin{itemize}
-  \item \textbf{Статическая спектральная Среда.}
-        \begin{itemize}
-          \item Задание фоновой спектральной плотности
-                $\rho_{\mathrm{spec}}^{(0)}(\omega,x)$ на сетке.
-          \item Введение локальных возмущений
-                $\delta\rho_{\mathrm{spec}}(\omega,x;\theta)$.
-        \end{itemize}
-
-  \item \textbf{Спектральный потенциал и гравитация.}
-        \begin{itemize}
-          \item Расчёт
-                $I_{\mathrm{grav}}(x)$,
-                $\phi(x) = -\ln I_{\mathrm{grav}}(x)$
-                и поля $\mathbf g(x)=-\nabla\phi(x)$.
-          \item Моделирование движения пробных тел в поле $\mathbf g$
-                в ньютоновском приближении.
-        \end{itemize}
-
-  \item \textbf{Простые дискретные операторы $\hat H$.}
-        \begin{itemize}
-          \item 1D и 2D решётки осцилляторов,
-                дискретизация оператора вида
+  \item \textbf{Геометрический атом для элементов $Z=1\ldots 36$ (H--Kr).}
+        Для s/p-блока (H--Ar) используется геометрически заданная
+        портовая структура, роли (terminator / bridge / hub / inert) и
+        базовые параметры атомного графа. Для первого d-периода
+        (Sc--Zn, Y--Cd) на уровне QSG v5.0 задействовано частично
+        эмпирическое расширение по $\chi_{\mathrm{spec}}$ и ролям
+        (см. обсуждение статуса d-блока ниже).
+  \item \textbf{Спектральная электроотрицательность и D/A-индексы.}
+        Калиброванная $\chi_{\mathrm{spec}}(Z)$ для s/p-блока,
+        построение индексов $(D,A)$ и классификация элементов по
+        донорным/акцепторным/амфотерным/инертным ролям.
+  \item \textbf{Стохастический рост деревьев (Grower) в деревьевом режиме.}
+        Генерация молекулярных графов без циклов для стандартных наборов
+        семян, с контролем статистики размеров и сложности.
+  \item \textbf{Функционал сложности для деревьев (v1 и FDM).}
+        Инварианты сложности для деревьев и феноменологический закон
+        роста сложности
+        $C_1(n) \approx \alpha_{\mathrm{tree}} \, n \log(1+n)$
+        с численно зафиксированными значениями
+        $\alpha_{\mathrm{tree}}^{(v1)}$ и
+        $\alpha_{\mathrm{tree}}^{(\mathrm{FDM})}$ в диапазоне типичных
+        размеров деревьев текущего генератора.
+  \item \textbf{Параметр мягкости $s(Z)$ для ростовой динамики.}
+        Используется в QSG v5.0 для дифференциации поведения деревьев,
+        в частности $s(C)=0.0$, $s(Si)=0.30$, что приводит к меньшим
+        размерам и сложностям деревьев $Si$ по сравнению с $C$ при
+        равных условиях роста.
                 $-\nabla\cdot(c^2\nabla)$.
           \item Вычисление нескольких низших собственных частот и
                 мод, построение игрушечной DOS.
@@ -6865,6 +7160,73 @@ v0.1, здесь явно отделены минимальные онтолог
   функционала $F_{\text{atom}} = F_{\text{levels}} + F_{\text{geom}}$,
   а валентность равна числу устойчивых портов связывания в
   конфигурации $\theta_Z$.
+
+\subsubsection*{Статус реализации геометрического атома в QSG v5.0}
+
+Формальное определение геометрического атома использует общий
+функционал вида
+\[
+  F_{\mathrm{atom}}[\theta]
+  \;=\;
+  F_{\mathrm{levels}}[\theta]
+  \;+\;
+  F_{\mathrm{geom}}[G_\theta]
+  \;+\;
+  F_{\mathrm{mass}}[\theta]
+  \;+\; \dots,
+\]
+где:
+
+\begin{itemize}
+  \item $F_{\mathrm{levels}}[\theta]$ сопоставляет спектр оператора
+        малых колебаний $\hat{H}[\theta]$ экспериментальным уровням
+        энергии атома;
+  \item $F_{\mathrm{geom}}[G_\theta]$ штрафует избыточную
+        геометрическую и топологическую сложность графа $G_\theta$;
+  \item $F_{\mathrm{mass}}[\theta]$ описывает топологический вклад
+        в массу и другие глобальные спектральные характеристики.
+\end{itemize}
+
+На уровне реализации QSG v5.0 статус этих частей следующий:
+
+\begin{itemize}
+  \item \textbf{Геометрический и графовый слой $F_{\mathrm{geom}}$.}
+        Для элементов $Z=1\ldots 36$ (H--Kr) реализованы прототипы
+        геометрического атома в виде конечных графов: зафиксированы
+        портовая структура, роли (terminator / bridge / hub / inert)
+        и базовые геометрические параметры атомного графа. Функционал
+        $F_{\mathrm{geom}}$ в QSG v5.0 представлен конечным набором
+        графовых инвариантов (симметрия, размер, ветвистость и т.п.),
+        используемых для классификации элементов и роста деревьев.
+  \item \textbf{Спектральный слой $F_{\mathrm{levels}}$.}
+        В полной теории $F_{\mathrm{levels}}$ должен строиться на базе
+        континуального оператора $\hat{H}[\theta]$, DOS/LDOS и
+        спектральных интегралов. В QSG v5.0 используется игрушечный
+        спектр графового лапласиана атомного графа, а также
+        калиброванная спектральная электроотрицательность
+        $\chi_{\mathrm{spec}}(Z)$ для s/p-блока. Соответствующая часть
+        функционала реализована как набор приближённых критериев
+        согласия с экспериментальной шкалой Паулинга и D/A-индексами.
+        Переход к континуальному оператору и честному $F_{\mathrm{levels}}$
+        отнесён к жёлтой зоне.
+  \item \textbf{Массовый и топологический слои $F_{\mathrm{mass}}$.}
+        В теоретической постановке $F_{\mathrm{mass}}$ и связанные
+        с ним топологические инварианты (узлы, зацепления и др.)
+        обеспечивают квантизацию массы и связаны с crossing-number
+        и родственными инвариантами. На уровне QSG v5.0 этот слой
+        находится в зачаточном состоянии: реализованы только деревьевые
+        инварианты сложности и эмпирические связи с ядерным
+        функционалом $F_{\mathrm{nuc}}$. Полноценный топологический
+        вклад в массу (включая crossing-слой и узловые инварианты)
+        отнесён к жёлтой и красной зонам.
+\end{itemize}
+
+Таким образом, геометрический атом в QSG v5.0 реализован как
+графовый прототип полноформатного спектрального объекта: он уже
+обладает осмысленными ролями, спектральной электроотрицательностью
+и ростовой динамикой (через Grower), но ещё не использует всю мощь
+континуального оператора $\hat{H}[\theta]$ и полного топологического
+функционала.
   \item[D2. Геометрический периодический закон.]%
   При росте $Z$ минимизирующие конфигурации $G_{\theta_Z}$ организуются
   в семейства с повторяющимися типами портов и ролей (terminator,
