Add CY-1 loopy growth, crossing toy-number and FDM backends

--- a/docs/name4.tex
+++ b/docs/name4.tex
@@ -237,16 +237,86 @@ geom--nuclear--complexity: таблица
 \texttt{geom\_nuclear\_complexity\_summary.csv}, объединяющая
 геометрический атом (роли, $\chi_{\mathrm{spec}}$, индексы $D/A$),
 FDM-комплексность (средние по росту деревьев) и ядерные индикаторы.
-На этом слое запущен первый анализ корреляций между
-нормированной FDM-комплексностью и ядерными характеристиками
+Комбинированная таблица формируется скриптом
+\texttt{analysis/analyze\_geom\_nuclear\_complexity.py}, который
+объединяет геометрические индексы, FDM-комплексность и ядерные
+таблицы (\texttt{geom\_isotope\_bands.csv},
+\texttt{geom\_nuclear\_map.csv}), а также вычисляет производные
+поля (`band\_width`, $N_{\mathrm{best}}/Z$, нейтронный избыток).
+На этом слое запущен первый анализ корреляций между нормированной
+FDM-комплексностью и ядерными характеристиками
 (\texttt{analysis/analyze\_fdm\_vs\_nucleus.py}, отчёт
 \texttt{results/fdm\_vs\_nucleus\_stats.txt}).
 
-После исправления поиска ядерных CSV комбинированная таблица содержит
-поля `band_width`, $N_{\mathrm{best}}$, $N_{\mathrm{best}}/Z$ и
-нейтронный избыток для большей части элементов H--Kr. Скрипт
-`analyze_fdm_vs_nucleus` даёт первые ненулевые Spearman-корреляции
-между нормированной FDM-комплексностью и ядерными параметрами (см.
-`docs/05_decision_log.md`). Эти связи пока умеренные и нестабильные,
-поэтому geom--nuclear--FDM фронт остаётся в статусе R\&D; дальнейшее
-развитие требует более полного и однородного ядерного датасета.
+Для элементов H--Xe глобальные Spearman-корреляции показывают
+умеренные связи между нормированной FDM-сложностью и ядерными
+параметрами (шириной полосы `band\_width`, отношением
+`Nbest\_over\_Z` и нейтронным избытком), а по ролям и отдельным
+группам (terminator/bridge/hub, d-блок, living hubs) картина
+остаётся шумной из-за малых выборок. Этот слой зафиксирован
+как R\&D-стенд: он демонстрирует наличие слабых/умеренных связей
+между геометрической сложностью и ядерными характеристиками, но
+для строгих утверждений требуется более полный и однородный
+ядерный датасет.
+
+\subsection{Пакет CY-1: первый стенд циклов и crossing-proxy (QSG v6.x)}
+
+В рамках пакета CY-1 для QSG v6.x введён первый стенд циклов:
+отдельный скрипт \texttt{analysis/scan\_cycles\_vs\_params.py}
+исследует область параметров роста, в которой стохастический Grower
+начинает порождать графы с ненулевым цикломатическим числом.
+На этом уровне вводится простой crossing-proxy (циклонaгрузка на
+вершину), который служит тренировочной площадкой для будущего
+топологического слоя сложности (crossing-number и родственные
+инварианты).
+
+\paragraph{Режимы loopy-growth (CY-1-A/B).}
+После подтверждения деревьевого предела QSG v5.0 в пакете CY-1
+введён R\&D-режим роста с циклами (loopy-growth). На уровне ядра
+расширены параметры роста \texttt{GrowthParams} флагом
+\texttt{allow\_cycles} и двумя числовыми параметрами
+(\texttt{max\_extra\_bonds}, \texttt{p\_extra\_bond}), которые по
+умолчанию выключены. Дополнительный слой \emph{loopy overlay}
+добавляет случайные связи между уже существующими вершинами поверх
+готового дерева и тем самым порождает графы с ненулевым
+цикломатическим числом.
+
+На основе скана параметров роста (\texttt{results/cycle\_param\_scan.csv})
+выбраны эталонные режимы CY-1-A (умеренная доля циклов) и
+CY-1-B (агрессивный циклонасыщенный рост). Скрипт
+\texttt{analysis/analyze\_loopy\_modes.py} измеряет для них долю
+графов с циклами, распределение цикломатического числа и среднюю
+циклонагрузку на вершину, что служит первым численным прототипом
+crossing-слоя топологической сложности.
+Слой FDM-сложности при этом расширен R\&D-вариантом
+\texttt{fdm\_loopy}: для заданной FDM-комплексности
+$C_{\mathrm{FDM}}(G)$ вводится штраф
+\\[0.3em]
+\hspace*{2em}$
+  C_{\mathrm{FDM}}^{(\mathrm{loopy})}(G)
+  \;=\;
+  C_{\mathrm{FDM}}(G)\,\Bigl(
+    1 + \alpha_{\mathrm{cycle}}\,\mu(G)
+      + \alpha_{\mathrm{load}}\,\tfrac{\mu(G)}{n(G)}
+  \Bigr),
+$\\[0.3em]
+где $\mu(G)$ --- цикломатическое число, $n(G)$ --- число вершин.
+Для деревьев ($\mu(G)=0$) закон совпадает с базовым FDM-режимом,
+а для графов CY-1-A/B дополнительный множитель делает циклы
+«дорогими» с точки зрения FDM-закона сложности.
+Дополнительно для малых графов (обычно $n\leq 8$) вводится
+игрушечный crossing-number $cr_{\mathrm{circle}}(G)$ в модели
+``вершины на окружности, рёбра --- хорды'', реализованный в модуле
+\texttt{core/crossing.py}. Анализ по режимам CY-1-A/B показывает,
+что плотность пересечений $cr_{\mathrm{circle}}(G)$ разумно
+коррелирует как с циклонагрузкой $\mu(G)/n(G)$, так и с фактором
+штрафа в FDM-законе, что служит первым численным подтверждением
+согласованности crossing-aware FDM-слоя с дискретным прототипом
+пересечений. Для дальнейшего R\&D введён расширенный backend
+\texttt{fdm\_loopy\_cross}, в котором поверх циклового штрафа
+используется дополнительный множитель
+$(1 + \beta_{\mathrm{cross}} \cdot \mathrm{crossing\_proxy}(G))$,
+где при малых размерах графа proxy строится по
+$cr_{\mathrm{circle}}(G)$, а при больших используется циклонагрузка.
+Параметр $\beta_{\mathrm{cross}}$ калибруется отдельно и не влияет
+на базовый FDM-режим v5.0.
