TEMP-1: add temperature-dependent growth and scan

--- a/docs/name4.tex
+++ b/docs/name4.tex
@@ -320,3 +320,19 @@ $(1 + \beta_{\mathrm{cross}} \cdot \mathrm{crossing\_proxy}(G))$,
 $cr_{\mathrm{circle}}(G)$, а при больших используется циклонагрузка.
 Параметр $\beta_{\mathrm{cross}}$ калибруется отдельно и не влияет
 на базовый FDM-режим v5.0.
+
+\paragraph{Пакет TEMP-1: температура среды и шум роста.}
+
+В ростовых параметрах QSG v6.x введён явный параметр температуры $T$,
+который деформирует эффективную вероятность продолжения ветви
+$p_{\mathrm{continue}}$ так, что при $T=1$ воспроизводится базовый
+деревьевой режим QSG v5.0, при $T<1$ деревья и loopy-графы в среднем
+растут длиннее, а при $T>1$ --- короче и легче распадаются.
+Конфигурации среды \texttt{growth\_env\_cold.yaml} и
+\texttt{growth\_env\_hot.yaml} задают первые "холодные" и "горячие"
+режимы для loopy-роста, а стенд
+\texttt{analysis/scan\_temperature\_effects.py} количественно описывает
+зависимость среднего размера и циклонагрузки от $T$ для элементов
+C, Si, O, S. Этот слой интерпретируется как первый технический шаг к
+модели манаховского "шума среды" и спектральной мягкости/жёсткости
+связей.
