Docs: add CHEM-VALIDATION equilibrium contour (C15/C16)

--- a/docs/name4.tex
+++ b/docs/name4.tex
@@ -228,7 +228,72 @@ $H(\lambda)$. Эта величина монотонно растёт с $\lambd
         crossing-слоя сложности;
   \item уточнение и углубление ядерного модуля и спектрального
         моста между геометрической таблицей и $F_{\mathrm{nuc}}$.
+  \item равновесный химический контур для алканов (tree-only): fixed-$N$ MCMC, диагностика mixing и продуктовый пайплайн C15/C16.
 \end{itemize}
+
+\subsection{Пакет CHEM-VALIDATION: равновесные алканы (C4--C16)}
+
+В рамках химического контура QSG развивается отдельная линия валидации на
+классе \emph{tree-only} алканов (углеродные деревья, $m=N-1$, $\mathrm{deg}\le 4$).
+Цель --- получить воспроизводимое равновесное распределение по топологиям
+для фиксированного $N$ и использовать его как эталон для продуктового ранжирования
+по энергии сложности (Mode~A: FDM-only на деревьях).
+
+\paragraph{Рост $\neq$ равновесие.}
+Ключевой вывод контура: частоты, наблюдаемые в grower-процессе, отражают
+в первую очередь \emph{proposal/kernel bias}. Равновесная мера для фиксированного $N$
+получается отдельным слоем: fixed-$N$ MCMC по пространству помеченных деревьев
+(leaf-rewire + поправка Гастингса). Для малых $N$ используется exact-база (Pr\"ufer).
+
+\paragraph{Инвариантность энергии на деревьях.}
+Для корректного сопоставления с $P_{\mathrm{pred}}$ и exact-базой энергия на tree-only
+делается инвариантной к переименованию вершин через канонизацию (deterministic relabel).
+Это устраняет label-dependence и стабилизирует сравнения распределений.
+
+\paragraph{Диагностика смешивания и выбор бюджета.}
+Для больших $N$ (C15/C16) бюджет шагов калибруется не ``вслепую'', а по guardrail-метрикам:
+$KL_{\max}$ (межцепочечный), $KL_{\mathrm{split}}$ (первая/вторая половины),
+$\widehat{R}$ по энергии и $ESS$ по энергии. Для $N=16$ финальный DoD-прогон
+зафиксирован на $32\,000\,000$ шагов на цепь при $\mathrm{burnin\_frac}=0.30$ и $\mathrm{thin}=10$
+(2 старта $\times$ 5 цепей; total budget $320\,000\,000$).
+
+\begin{center}
+\begin{tabular}{l r}
+\hline
+Метрика (C16, финал) & Значение \\
+\hline
+$KL_{\mathrm{max\_pairwise}}$ & $0.004858$ \\
+$KL_{\mathrm{split\_max}}$ & $0.009774$ \\
+$\widehat{R}_{\mathrm{energy}}$ (max) & $1.000001$ \\
+$ESS_{\mathrm{energy}}$ (min) & $6.7\times 10^{5}$ \\
+Coverage ($n_{\mathrm{unique}}$) & $10359/10359$ \\
+\hline
+\end{tabular}
+\end{center}
+
+Для $N=15$ финальный DoD-прогон также закрыт в fixed-budget режиме:
+строгая coverage $4347/4347$, $KL_{\mathrm{max\_pairwise}}=0.004114$,
+$KL_{\mathrm{split\_max}}=0.008336$, $\widehat{R}_{\mathrm{energy}}=1.000000$,
+$ESS_{\mathrm{energy}}\approx 3.8\times 10^{5}$.
+
+\paragraph{``Статистический пол'' для $KL_{\mathrm{split}}$.}
+На больших пространствах топологий (C16: $K\approx 10^4$) $KL_{\mathrm{split}}$
+имеет ненулевой нижний уровень из-за конечной выборки половин; поэтому burn-in
+и размер retained-window должны подбираться так, чтобы теоретический пол был ниже
+инженерного порога (0.01).
+
+\paragraph{Distributed-контур (EQ-DIST-1).}
+Чтобы сделать скан бюджетов и DoD-прогоны устойчивыми к тайм-лимитам и масштабируемыми
+на произвольное железо, введены \emph{work units} (как в GIMPS):
+генератор задач (make\_tasks), воркер (worker) и агрегатор (aggregate) с режимом
+status (READY/MISSING) и опциональной двойной верификацией на выбранных шагах.
+В прод-режиме результаты и агрегаты автоматически фиксируются commit+push.
+
+\paragraph{Следующий шаг.}
+После закрытия C16 необходимо закрыть C15 тем же стандартом (fixed-budget, burn-in=0.30,
+строгая coverage), а затем упаковать контур в продуктовый pipeline: стабильные CLI,
+детерминированные seeds, единый формат отчётов и регрессионные тесты на малых $N$.
+
 
 \subsection{Geom–nuclear–FDM: первый связанный стенд}
 
